--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,7 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.2.jar}:\
     ${file.reference.webcam-capture-0.3.12.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:deprecation -Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -83,14 +83,11 @@ main.class=javaapplication9.front
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
