--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JavaApplication9
+application.title=Brightness_Automator
 application.vendor=kib
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,15 +29,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication9.jar
+dist.jar=${dist.dir}/Brightness_Automator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication9
+dist.jlink.output=${dist.jlink.dir}/Brightness_Automator
 endorsed.classpath=
 excludes=
-file.reference.bridj-0.7.0.jar=C:\\Users\\kib\\Documents\\NetBeansProjects\\bridj-0.7.0.jar
-file.reference.slf4j-api-1.7.2.jar=C:\\Users\\kib\\Documents\\NetBeansProjects\\slf4j-api-1.7.2.jar
-file.reference.webcam-capture-0.3.12.jar=C:\\Users\\kib\\Documents\\NetBeansProjects\\webcam-capture-0.3.12.jar
+file.reference.bridj-0.7.0.jar=../bridj-0.7.0.jar
+file.reference.slf4j-api-1.7.2.jar=../slf4j-api-1.7.2.jar
+file.reference.webcam-capture-0.3.12.jar=../webcam-capture-0.3.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -78,8 +78,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication9
-main.class=javaapplication9.front
+jlink.launcher.name=Brightness_Automator
+main.class=BrightnessAutomator.front
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
