--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Brightness_Automator
 endorsed.classpath=
 excludes=
-file.reference.bridj-0.7.0.jar=../bridj-0.7.0.jar
-file.reference.slf4j-api-1.7.2.jar=../slf4j-api-1.7.2.jar
-file.reference.webcam-capture-0.3.12.jar=../webcam-capture-0.3.12.jar
+file.reference.bridj-0.7.0.jar=../../bridj-0.7.0.jar
+file.reference.slf4j-api-1.7.2.jar=../../slf4j-api-1.7.2.jar
+file.reference.webcam-capture-0.3.12.jar=../../webcam-capture-0.3.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
